5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1872.log
== TEST (2019-04-30 10:39:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y=0):
	print("Eixo X")
	else:
		if(y>0)and(x=0):
			print("Eixo Y")
-- ERROR:
File "XXXX", line 6
    if (x>0)and(y=0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:39:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y=0):
	print("Eixo X")
else:
	if(y>0)and(x=0):
		print("Eixo Y")
-- ERROR:
File "XXXX", line 6
    if (x>0)and(y=0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y=0):
	print("Eixo X")
else:
	(y>0)and(x=0):
		print("Eixo Y")
-- ERROR:
File "XXXX", line 6
    if (x>0)and(y=0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y=0):
	print("Eixo X")
else:
	(y>0)and(x=0):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 6
    if (x>0)and(y=0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	(y>0)and(x=0):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    (y>0)and(x=0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:40:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	(y>0)and(x==0):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    (y>0)and(x==0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	(y>0)and(x==0)
	print("Eixo Y")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:41:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
	else:
		(y>0)and(x==0)
		print("Eixo Y")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
	else:
		if (y>0)and(x==0):
		print("Eixo Y")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:42:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
	else:
		if (y>0)and(x==0):
			print("Eixo Y")
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:43:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	if (y>0)and(x==0):
		print("Eixo Y")
	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:44:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	if (y>0)and(x==0):
		print("Eixo Y")
	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:44:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	if (y>0)and(x==0):
		print("Eixo Y")
	
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	if (y>0)and(x==0):
		print("Eixo Y")
	else:
		if(y==o)and(x==0)
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0)
					print("Q4")
				else:
					if(x<0)and(y>0)
						print("Q2")
					else:
						if(x<0)and(y<0)
							print("Q3")
-- ERROR:
File "XXXX", line 12
    if(y==o)and(x==0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:48:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	if (y>0)and(x==0):
		print("Eixo Y")
	else:
		if(y==o)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(y==o)and(x==0):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:49:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)and(y==0):
	print("Eixo X")
else:
	if (y>0)and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:50:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)or(x<0)and(y==0):
	print("Eixo X")
else:
	if (y>0)or(y<0) and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:50:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)or(x<0)and(y==0):
	print("Eixo X")
else:
	if (y>0)or(y<0) and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- EXECUTION TIME:
0.193622
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:50:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x>0)or(x<0)and(y==0):
	print("Eixo X")
else:
	if (y>0)or(y<0) and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:51:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x!=0)and(y==0):
	print("Eixo X")
else:
	if (y!=0) and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:51:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x!=0)and(y==0):
	print("Eixo X")
else:
	if (y!=0) and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:51:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("digite o x: "))
y = float(input("digite o y: "))

if (x!=0)and(y==0):
	print("Eixo X")
else:
	if (y!=0) and(x==0):
		print("Eixo Y")
	else:
		if(y==0)and(x==0):
			print("Origem")
		else:
			if(x>0)and(y>0):
				print("Q1")
			else:
				if(x>0)and(y<0):
					print("Q4")
				else:
					if(x<0)and(y>0):
						print("Q2")
					else:
						if(x<0)and(y<0):
							print("Q3")
-- EXECUTION TIME:
0.299704
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
